--- a/project/composer.json
+++ b/project/composer.json
@@ -16,9 +16,10 @@
         }
     },
     "require"           : {
-        "php"                 : ">=7.0"
+        "php"          : ">=7.0",
+        "doctrine/orm" : "2.5.2"
     },
-    "require-dev" : {
+    "require-dev"       : {
         "phpunit/phpunit"     : "5.0.*",
         "phpunit/php-invoker" : ">=1.1.0@stable"
     },
