--- a/project/composer.json
+++ b/project/composer.json
@@ -16,8 +16,9 @@
         }
     },
     "require"           : {
-        "php"          : ">=7.0",
-        "doctrine/orm" : "2.5.2"
+        "php"           : ">=7.0",
+        "doctrine/orm"  : "2.5.2",
+        "php-di/php-di" : "*"
     },
     "require-dev"       : {
         "phpunit/phpunit"     : "5.0.*",
