--- a/project/composer.json
+++ b/project/composer.json
@@ -18,6 +18,7 @@
     "require"           : {
         "php"                 : ">=7.0",
         "doctrine/orm"        : "2.5.2",
+        "symfony/yaml"        : "2.*",
         "doctrine/migrations" : "1.2.*",
         "php-di/php-di"       : "*",
         "twig/twig"           : "^1.18"
