--- a/project/composer.json
+++ b/project/composer.json
@@ -16,19 +16,25 @@
         }
     },
     "require"           : {
-        "php"                         : ">=7.0",
-        "doctrine/orm"                : "2.5.2",
-        "symfony/yaml"                : "2.*",
-        "doctrine/migrations"         : "1.2.*",
-        "creof/doctrine2-spatial"     : "1.0.0",
-        "php-di/php-di"               : "*",
-        "twig/twig"                   : "^1.18",
-        "elasticsearch/elasticsearch" : "*",
-        "fxp/composer-asset-plugin"   : "~1.1",
-        "bower-asset/bootstrap"       : "3.3.6",
-        "bower-asset/requirejs"       : "*",
-        "bower-asset/requirejs-twig"  : "*",
-        "bower-asset/jquery-typewatch": "*"
+        "php"                          : ">=7.0",
+        "doctrine/orm"                 : "2.5.2",
+        "symfony/yaml"                 : "2.*",
+        "doctrine/migrations"          : "1.2.*",
+        "creof/doctrine2-spatial"      : "1.0.0",
+        "php-di/php-di"                : "*",
+        "twig/twig"                    : "^1.18",
+
+        "elasticsearch/elasticsearch"  : "*",
+
+        "egeloen/google-map"           : "dev-master",
+        "willdurand/geocoder"          : "*",
+        "widop/http-adapter"           : "1.0.*",
+
+        "fxp/composer-asset-plugin"    : "~1.1",
+        "bower-asset/bootstrap"        : "3.3.6",
+        "bower-asset/requirejs"        : "*",
+        "bower-asset/requirejs-twig"   : "*",
+        "bower-asset/jquery-typewatch" : "*"
     },
     "require-dev"       : {
         "phpunit/phpunit"     : "5.0.*",
