--- a/project/composer.json
+++ b/project/composer.json
@@ -26,7 +26,7 @@
         "elasticsearch/elasticsearch"  : "*",
         "egeloen/google-map"           : "dev-master",
         "willdurand/geocoder"          : "*",
-        "widop/http-adapter"           : "1.0.*",
+        "widop/http-adapter"           : "1.1.0",
         "swiftmailer/swiftmailer"      : "@stable",
         "fxp/composer-asset-plugin"    : "~1.1",
         "bower-asset/bootstrap"        : "3.3.6",
